Force the paintops to copy the brush when the stroke is started

BUG:363178